[gd_scene load_steps=83 format=3 uid="uid://c7ufa2mpjjlj7"]

[ext_resource type="Script" path="res://BattleScene/battle_scene.gd" id="1_ca6ap"]
[ext_resource type="Texture2D" uid="uid://bfnpqrhc5b12p" path="res://UnitAssets/UnitSprites/infantryHurt.png" id="2_j0nya"]
[ext_resource type="LabelSettings" uid="uid://dfw42yrcm2sa3" path="res://BattleScene/standardLabel.tres" id="2_m3j3s"]
[ext_resource type="Texture2D" uid="uid://dfeqd8v228626" path="res://UnitAssets/UnitSprites/infantry.png" id="3_3pc1b"]
[ext_resource type="Texture2D" uid="uid://bdtcjt3agcx6t" path="res://UnitAssets/UnitSprites/carrier_shoot_menu.png" id="3_a2ma3"]
[ext_resource type="Texture2D" uid="uid://dwercr8on2417" path="res://UnitAssets/UnitSprites/carrier_idle_menu.png" id="3_ppuqe"]
[ext_resource type="Texture2D" uid="uid://dy2e1hkh7wsrn" path="res://UnitAssets/UnitSprites/carrier_hurt_menu.png" id="3_tr2wj"]
[ext_resource type="Texture2D" uid="uid://cu7l8hykw6few" path="res://UnitAssets/UnitSprites/soldierShoot.png" id="4_ci1ai"]
[ext_resource type="Texture2D" uid="uid://bl13in8ld3vci" path="res://UnitAssets/UnitSprites/mech_hurt.png" id="6_4dq2f"]
[ext_resource type="Texture2D" uid="uid://b8detu78u0m58" path="res://UnitAssets/UnitSprites/enemy_infantry_hurt.png" id="6_bnv10"]
[ext_resource type="Texture2D" uid="uid://r07info5dwpg" path="res://UnitAssets/UnitSprites/enemy_infantry_shoot.png" id="7_6cu20"]
[ext_resource type="Texture2D" uid="uid://3820ea07kruj" path="res://UnitAssets/UnitSprites/mech.png" id="7_w1c0q"]
[ext_resource type="Texture2D" uid="uid://dbv33nojkiajp" path="res://UnitAssets/UnitSprites/enemy_infantry.png" id="8_fsfdp"]
[ext_resource type="Texture2D" uid="uid://b127vb1ua38fe" path="res://UnitAssets/UnitSprites/mech_attack.png" id="8_oogt3"]
[ext_resource type="Texture2D" uid="uid://chkt4dler0fym" path="res://UnitAssets/UnitSprites/enemy_mech_hurt.png" id="9_cbtj8"]
[ext_resource type="Texture2D" uid="uid://kvlplamfracp" path="res://UnitAssets/UnitSprites/enemy_mech_idle.png" id="10_aj7fy"]
[ext_resource type="Texture2D" uid="uid://dhyseq37vhdw1" path="res://UnitAssets/UnitSprites/enemy_mech_attack.png" id="11_7mjiw"]
[ext_resource type="Texture2D" uid="uid://bdxgv1xldurdv" path="res://UnitAssets/UnitSprites/emplacement_hurt.png" id="12_aergp"]
[ext_resource type="Texture2D" uid="uid://c2sls20rjjaue" path="res://UnitAssets/UnitSprites/emplacement_idle.png" id="13_ikwbq"]
[ext_resource type="Texture2D" uid="uid://bvgohkqra0g0i" path="res://UnitAssets/UnitSprites/emplacement_shoot.png" id="14_iuxli"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pso7u"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wprx5"]
atlas = ExtResource("3_tr2wj")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3d3lt"]
atlas = ExtResource("3_tr2wj")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1uqdr"]
atlas = ExtResource("3_ppuqe")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vquai"]
atlas = ExtResource("3_ppuqe")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjx1w"]
atlas = ExtResource("3_a2ma3")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pmac"]
atlas = ExtResource("3_a2ma3")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cou5h"]
atlas = ExtResource("3_a2ma3")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xyh3x"]
atlas = ExtResource("3_a2ma3")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nfag"]
atlas = ExtResource("3_a2ma3")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiqas"]
atlas = ExtResource("3_a2ma3")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tudn2"]
atlas = ExtResource("6_bnv10")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7il1p"]
atlas = ExtResource("6_bnv10")
region = Rect2(32, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocx5j"]
atlas = ExtResource("8_fsfdp")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_36h4q"]
atlas = ExtResource("8_fsfdp")
region = Rect2(32, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eybjs"]
atlas = ExtResource("7_6cu20")
region = Rect2(0, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_km1kl"]
atlas = ExtResource("7_6cu20")
region = Rect2(64, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kms6a"]
atlas = ExtResource("7_6cu20")
region = Rect2(128, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8krvn"]
atlas = ExtResource("7_6cu20")
region = Rect2(0, 48, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayy5d"]
atlas = ExtResource("7_6cu20")
region = Rect2(128, 48, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nua0v"]
atlas = ExtResource("9_cbtj8")
region = Rect2(0, 0, 160, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcj4p"]
atlas = ExtResource("9_cbtj8")
region = Rect2(160, 0, 160, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_f14tl"]
atlas = ExtResource("10_aj7fy")
region = Rect2(0, 0, 160, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_445nk"]
atlas = ExtResource("10_aj7fy")
region = Rect2(160, 0, 160, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_anmbp"]
atlas = ExtResource("11_7mjiw")
region = Rect2(0, 0, 224, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_v20db"]
atlas = ExtResource("11_7mjiw")
region = Rect2(224, 0, 224, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8enc"]
atlas = ExtResource("11_7mjiw")
region = Rect2(448, 0, 224, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4ha0"]
atlas = ExtResource("11_7mjiw")
region = Rect2(0, 256, 224, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_xr45m"]
atlas = ExtResource("11_7mjiw")
region = Rect2(224, 256, 224, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_mevww"]
atlas = ExtResource("11_7mjiw")
region = Rect2(448, 256, 224, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm53m"]
atlas = ExtResource("12_aergp")
region = Rect2(0, 0, 224, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_a60s4"]
atlas = ExtResource("12_aergp")
region = Rect2(224, 0, 224, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5dbd"]
atlas = ExtResource("13_ikwbq")
region = Rect2(0, 0, 224, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgv5m"]
atlas = ExtResource("14_iuxli")
region = Rect2(0, 0, 224, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7ltd"]
atlas = ExtResource("14_iuxli")
region = Rect2(224, 0, 224, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_2owwq"]
atlas = ExtResource("14_iuxli")
region = Rect2(448, 0, 224, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_nna2x"]
atlas = ExtResource("14_iuxli")
region = Rect2(0, 256, 224, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5biy"]
atlas = ExtResource("14_iuxli")
region = Rect2(224, 256, 224, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_nden2"]
atlas = ExtResource("14_iuxli")
region = Rect2(448, 256, 224, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4igh"]
atlas = ExtResource("2_j0nya")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uc2pi"]
atlas = ExtResource("2_j0nya")
region = Rect2(32, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvkdb"]
atlas = ExtResource("3_3pc1b")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o83ep"]
atlas = ExtResource("3_3pc1b")
region = Rect2(32, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bu4j"]
atlas = ExtResource("4_ci1ai")
region = Rect2(0, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mu6wt"]
atlas = ExtResource("4_ci1ai")
region = Rect2(64, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifm81"]
atlas = ExtResource("4_ci1ai")
region = Rect2(128, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qadx"]
atlas = ExtResource("4_ci1ai")
region = Rect2(0, 48, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tw1m4"]
atlas = ExtResource("4_ci1ai")
region = Rect2(64, 48, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd7xy"]
atlas = ExtResource("4_ci1ai")
region = Rect2(128, 48, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xy1fd"]
atlas = ExtResource("6_4dq2f")
region = Rect2(0, 0, 160, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4v3tk"]
atlas = ExtResource("6_4dq2f")
region = Rect2(160, 0, 160, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8aiov"]
atlas = ExtResource("7_w1c0q")
region = Rect2(0, 0, 160, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl2qr"]
atlas = ExtResource("7_w1c0q")
region = Rect2(160, 0, 160, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_11f7o"]
atlas = ExtResource("8_oogt3")
region = Rect2(0, 0, 224, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsceq"]
atlas = ExtResource("8_oogt3")
region = Rect2(224, 0, 224, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_2y7wb"]
atlas = ExtResource("8_oogt3")
region = Rect2(448, 0, 224, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_wq77s"]
atlas = ExtResource("8_oogt3")
region = Rect2(0, 256, 224, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_cc1cq"]
atlas = ExtResource("8_oogt3")
region = Rect2(224, 256, 224, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2ebh"]
atlas = ExtResource("8_oogt3")
region = Rect2(448, 256, 224, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_0amgm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wprx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3d3lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wprx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3d3lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wprx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3d3lt")
}],
"loop": true,
"name": &"carrierHurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1uqdr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vquai")
}],
"loop": true,
"name": &"carrierIdle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjx1w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pmac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cou5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xyh3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nfag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hiqas")
}],
"loop": false,
"name": &"carrierShoot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tudn2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7il1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tudn2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7il1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tudn2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7il1p")
}],
"loop": true,
"name": &"enemyInfantryHurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocx5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36h4q")
}],
"loop": true,
"name": &"enemyInfantryIdle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eybjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_km1kl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kms6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8krvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_km1kl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kms6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8krvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayy5d")
}],
"loop": false,
"name": &"enemyInfantryShoot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nua0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcj4p")
}],
"loop": true,
"name": &"enemyMechHurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f14tl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_445nk")
}],
"loop": true,
"name": &"enemyMechIdle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_anmbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v20db")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8enc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4ha0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xr45m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mevww")
}],
"loop": true,
"name": &"enemyMechShoot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm53m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a60s4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm53m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a60s4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm53m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a60s4")
}],
"loop": true,
"name": &"enemyTurretHurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5dbd")
}],
"loop": true,
"name": &"enemyTurretIdle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgv5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7ltd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2owwq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nna2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5biy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nden2")
}],
"loop": false,
"name": &"enemyTurretShoot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4igh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uc2pi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4igh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uc2pi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4igh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uc2pi")
}],
"loop": true,
"name": &"infantryHurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvkdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o83ep")
}],
"loop": true,
"name": &"infantryIdle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bu4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mu6wt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifm81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qadx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tw1m4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifm81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qadx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tw1m4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd7xy")
}],
"loop": false,
"name": &"infantryShoot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xy1fd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4v3tk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xy1fd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4v3tk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xy1fd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4v3tk")
}],
"loop": true,
"name": &"mechHurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8aiov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl2qr")
}],
"loop": true,
"name": &"mechIdle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_11f7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsceq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2y7wb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wq77s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cc1cq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2ebh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11f7o")
}],
"loop": false,
"name": &"mechShoot",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6dlfa"]

[sub_resource type="LabelSettings" id="LabelSettings_pk2s1"]
font_size = 32

[node name="BattleScene" type="Control" groups=["BattleScene"]]
z_index = 10
layout_mode = 3
anchors_preset = 0
scale = Vector2(0.5, 0.5)
script = ExtResource("1_ca6ap")

[node name="AttackerPane" type="Node2D" parent="."]

[node name="AttackerPanel" type="Panel" parent="AttackerPane"]
offset_left = -424.0
offset_top = -250.0
offset_right = -74.0
offset_bottom = 252.0
theme_override_styles/panel = SubResource("StyleBoxFlat_pso7u")
metadata/_edit_use_anchors_ = true

[node name="CurrHealthLabel" type="Label" parent="AttackerPane/AttackerPanel"]
layout_mode = 0
offset_left = 105.0
offset_top = 451.0
offset_right = 168.0
offset_bottom = 502.0
label_settings = ExtResource("2_m3j3s")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MaxHealthLabel" type="Label" parent="AttackerPane/AttackerPanel"]
visible = false
layout_mode = 0
offset_left = 186.0
offset_top = 451.0
offset_right = 249.0
offset_bottom = 502.0
label_settings = ExtResource("2_m3j3s")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="AttackerSprite" type="AnimatedSprite2D" parent="AttackerPane/AttackerPanel"]
position = Vector2(175, 237)
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_0amgm")
animation = &"enemyInfantryIdle"
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="AttackerPane/AttackerPanel"]
layout_mode = 0
offset_left = 62.0
offset_top = 454.0
offset_right = 127.0
offset_bottom = 499.0
text = "HP-"
label_settings = ExtResource("2_m3j3s")

[node name="Label2" type="Label" parent="AttackerPane/AttackerPanel"]
visible = false
layout_mode = 0
offset_left = 239.0
offset_top = 454.0
offset_right = 304.0
offset_bottom = 499.0
text = "-MAX"
label_settings = ExtResource("2_m3j3s")

[node name="AttackAudio" type="AudioStreamPlayer2D" parent="AttackerPane"]

[node name="DefenderPane" type="Node2D" parent="."]

[node name="DefenderPanel" type="Panel" parent="DefenderPane"]
offset_left = 81.0
offset_top = -250.0
offset_right = 431.0
offset_bottom = 252.0
theme_override_styles/panel = SubResource("StyleBoxFlat_6dlfa")
metadata/_edit_use_anchors_ = true

[node name="CurrHealthLabel" type="Label" parent="DefenderPane/DefenderPanel"]
layout_mode = 0
offset_left = 105.0
offset_top = 451.0
offset_right = 168.0
offset_bottom = 502.0
label_settings = ExtResource("2_m3j3s")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MaxHealthLabel" type="Label" parent="DefenderPane/DefenderPanel"]
visible = false
layout_mode = 0
offset_left = 186.0
offset_top = 451.0
offset_right = 249.0
offset_bottom = 502.0
label_settings = ExtResource("2_m3j3s")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="DefenderSprite" type="AnimatedSprite2D" parent="DefenderPane/DefenderPanel"]
position = Vector2(175, 237)
scale = Vector2(-6, 6)
sprite_frames = SubResource("SpriteFrames_0amgm")
animation = &"enemyTurretHurt"

[node name="Label" type="Label" parent="DefenderPane/DefenderPanel"]
layout_mode = 0
offset_left = 63.0
offset_top = 454.0
offset_right = 128.0
offset_bottom = 499.0
text = "HP-"
label_settings = ExtResource("2_m3j3s")

[node name="Label2" type="Label" parent="DefenderPane/DefenderPanel"]
visible = false
layout_mode = 0
offset_left = 239.0
offset_top = 454.0
offset_right = 304.0
offset_bottom = 499.0
text = "-MAX"
label_settings = ExtResource("2_m3j3s")

[node name="DefendAudio" type="AudioStreamPlayer2D" parent="DefenderPane"]

[node name="BattleMessage" type="Label" parent="."]
layout_mode = 0
offset_left = -304.0
offset_top = 263.0
offset_right = 305.0
offset_bottom = 371.0
label_settings = SubResource("LabelSettings_pk2s1")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true
